--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 <body>
     <div class="container">
         <header>
-            <h1>Real Estate App</h1>
+            <h1>Real Estate 
+            <span class="text-active"> App </span>
+            </h1> 
             <h4> Discover latest properties for sale anywhere in the USA.</h4>
         </header>
         <form>
@@ -33,13 +35,21 @@
                     <option value="photos">photos</option>
                 </select>
             </div>
+
+
             <div class="minBeds">
                 <label>Minimum Beds</label>
-                <input type="number" placeholder="1">
-            </div>
-            <button class="searchBar" type="submit">Search</button>
 
+                <input type="number" placeholder="1">
+
+                <button type="submit">Search</button>
+            </div>
         </form>
+        <div class="Team">
+          <p>
+            Made By Team 10 - University of Miami Coding BootCamp
+          </p>  
+        </div>
     </div>
 </body>
 
