--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Real Estate App Group 10</title>
+    <link rel="shortcut icon" href="assets/images/faviconicon.ico">
     <link rel="stylesheet" href="./assets/style.css">
     <script defer src="./assets/script.js"></script>
 </head>
