updated HTML/CSS with dummy card

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                     <option value="WV">WV</option>
                     <option value="WI">WI</option>
                     <option value="WY">WY</option>
-                    
+
 
                 </select>
             </div>
@@ -92,7 +92,21 @@
                 </div>
             </div>
         </form>
-<!-- Dynamically created elements here -->
+        <!-- Dynamically created elements here -->
+        <div class="cardContainer">
+            <div class="card">
+                <!-- photo is a part of the object we can use to automatically input -->
+                <img src="https://ap.rdcpix.com/1f9cac579aa90d802977298da5bdfb69l-m2938841960x.jpg" alt="property-image">
+                <!-- anything in quotes we can use the object to automatically input -->
+                <p><span id="price">"310k" </span><span id="prop-type">"single_family"</span></p>
+                <p><span id="bath">"x" Baths </span>-<span id="bed"> "x" Beds</span></p>
+                <p id="address">"Address"</p>
+                <br />
+                <!-- how do we ge tthe URL for this.. otherwise prob delete -->
+                <a href="*" id="details">Details</a>
+            </div>
+
+        </div>
 
         <div class="Team">
             <p>
