added bulma classes to cards

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                     <label>Minimum Beds</label>
                     <input id="minBedsSelect" type="number" placeholder="1">
                 </div>
-                <div>
+                <div class="py-6">
                     <button id="searchBtn" type="submit">Search</button>
                 </div>
             </div>
