created persisting search data on webpage via localStorage

--- a/index.html
+++ b/index.html
@@ -86,15 +86,15 @@
                     <label>Minimum Beds</label>
                     <input id="minBedsSelect" type="number" placeholder="1">
                 </div>
-                <div class="py-6">
+                <div class="searchButton py-6">
                     <button id="searchBtn" type="submit">Search</button>
                 </div>
             </div>
         </form>
-
-
-        
-
+        <!-- Search History Here -->
+        <div class="searchContainer" id="searchContainer">
+            
+        </div>
 
         <!-- Dynamically created elements here -->
 
